# e-commerce-shop-project

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_roles_and_admin.py  0003_alter_user_email.py
api/: serializers.py  tests.py  urls.py  views.py
cart/: models.py  services.py
cart/migrations/: 0001_initial.py
catalog/: admin.py  models.py
catalog/management/commands/: seed_demo.py
catalog/migrations/: 0001_initial.py
common/: admin.py  models.py
diploma-frontend/frontend/static/frontend/assets/js/: app.js  payment.js  product-detail.js  sales.js  scripts.js  signUp.js
diploma-frontend/frontend/templates/frontend/: catalog.html  paymentsomeone.html  profile.html
docker/: Dockerfile  docker-compose.yml
fixtures/: demo.json
megano/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
orders/: admin.py  models.py
orders/migrations/: 0001_initial.py  0002_delivery_defaults.py
payments/: admin.py  models.py  tasks.py
payments/migrations/: 0001_initial.py  0002_alter_payment_number.py
