[project]
name = "e-commerce-shop-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-camel-case>=1.4.2",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "redis>=8.0.1",
]
